Fix for pointer not showing

--- a/assets/css/blog.css
+++ b/assets/css/blog.css
@@ -1,4 +1,3 @@
-
 header .blogmenu a, #sharepanel a {
 	display: none;
 	color: #fff;
@@ -170,6 +169,14 @@ div.gallery img:active {
 	font-size: 2em;
 }
 
+#contact {
+	cursor: pointer;
+}
+
+#privacy {
+	cursor: pointer;
+}
+
 div.mobile {
 	display: none;
 }
@@ -286,11 +293,7 @@ div.mobile {
 	#contactpanel p span {
 		display: none;
 	}
-
-	#contact {
-		cursor: pointer;
-	}
-
+	
 	#back-to-top {
 		background-color: rgba(0, 0, 0, .25);
 		border-radius: 0;
